--- a/next-app/package.json
+++ b/next-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -34,6 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
+    "jsonwebtoken": "^8.5.1",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
@@ -53,6 +55,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/bn.js": "^5.1.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.10",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
