--- a/ws/package.json
+++ b/ws/package.json
@@ -7,7 +7,7 @@
     "preinstall": "npx only-allow pnpm",
     "dev": "nodemon src/app.ts",
     "start": "node dist/app.js",
-    "build": "pnpm && npx tsc -b"
+    "build": "pnpm install && npx tsc -b"
   },
   "keywords": [],
   "author": "",
