--- a/ws/package.json
+++ b/ws/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^3.1.7",
     "redis": "^4.7.0",
     "ts-node": "^10.9.2",
-    "typescipt": "^1.0.0",
+    "typescript": "^1.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
