--- a/ws/package.json
+++ b/ws/package.json
@@ -19,11 +19,12 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "redis": "^4.7.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^1.0.0",
+    "ts-node": "^10.9.2"
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/jsonwebtoken": "^9.0.7",
+     "ts-node": "^10.9.2",
+      "typescript": "^5.6.2"
   }
 }
