--- a/ws/package.json
+++ b/ws/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "redis": "^4.7.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
